# channel-to-group-forwarder

./: .env.sample  .gitignore  __main__.py  app.py  groups.json  groups.txt  helpers.py  pyproject.toml  requirements.txt  run.sh
api/: helpers.py  index.py
core/: config.py  db.py  handlers.py  models.py
models/: groups.py  users.py
routers/: forward_router.py  register_router.py
routers/admin/: groups_router.py
