[tool.poetry]
name = "channel-message-forwarder"
version = "0.1.0"
description = ""
authors = ["Hundera Awoke <hunderaweke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
python-decouple = "^3.8"
pymongo = "^4.6.3"
loguru = "^0.7.2"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
motor = "^3.3.2"
dnspython = "^2.6.1"
notifiers = "^1.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
